--- a/appstate.json
+++ b/appstate.json
@@ -1,15 +1,128 @@
-[{
-	"key": "sb",
-	"value": "1QFsaAd1wM9G4FGhQFwQbajz",
-	"path": "/",
-	"hostOnly": false,
-	"domain": ".facebook.com",
-	"creation": "2025-07-10T16:40:10.604Z",
-	"lastAccessed": "2025-07-10T16:40:10.604Z"
-	},
-	{
-	"key": "m_pixel_ratio",
-	"value": "1.7000000476837158",
-	"path": "/",
-	"hostOnly": false,
-	"domain": 
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261583676579127%22%3A%22BCycgMoc%22%2C%2261557967960540%22%3A%22hPcYxsKl%22%2C%22100093182723125%22%3A%2285CjFgkZ%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.566Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "sb",
+        "value": "yCkPac8m7dbK9qUqJrUj2Idf",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B705x360x2",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "dpr",
+        "value": "2.1988937854766846",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2995%3Btimestamp%3A1764087122",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "pas",
+        "value": "61583676579127%3AOquzsV8ucz%2C100090650139111%3A0vRd3kT0Wb%2C61576130305918%3AfrEn5vWH1r%2C61557967960540%3Ab44JHcBZ1a%2C100093182723125%3AREL3EAFain%2C100082321269682%3AV2XHjeVWp8",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "datr",
+        "value": "1_gtaaDJfe1x_J_gReHrdm1M",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61584444963240",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "wd",
+        "value": "891x1746",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "fr",
+        "value": "1JaXLCi9rjun1qHXY.AWfBdosmgbT0w_8o8ghCplZFX_p-zTjPedzgaldv60Efz43H0zw.BpMDhG..AAA.0.0.BpMDhG.AWe5H4CwanRYyw5MjbO3_54yfZI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    },
+    {
+        "key": "xs",
+        "value": "3%3AH4HN_9Pyj7LA3w%3A2%3A1764620519%3A-1%3A-1%3A%3AAcxq7zvFe7xL2XCdZpt17ajxa5ow3qNxbIVVRt26Jg",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-12-03T13:16:54.573Z",
+        "lastAccessed": "2025-12-03T13:16:54.573Z"
+    }
+]
