--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "Silly B",
+    "BOTNAME": "𝐁𝐎𝐓 𝐇𝐀𝐁𝐈𝐁",
     "PREFIX": "+",
     "OTHERBOT": [
         ""
@@ -26,10 +26,10 @@
         ""
     ],
     "ADMINBOT": [
-        "100040426712109",
-        ""
+        "100082962740878",
+        "100079043707149",
     ],
-    "OWNER": "🆁︎🆄︎🅳︎🆁︎🅰︎ 🅹︎🅰︎🅰︎🆃︎",
+    "OWNER": "🆂︎🅺︎ 🅷︎🅰︎🅱︎🅸︎🅱︎",
     "AGE": "21",
     "GENDER": "𝗠𝗮𝗟𝗲",
     "FACEBOOK": "https://www.facebook.com/share/15Z3vxfcBJ/",
@@ -41,7 +41,7 @@
     "AutoGreetWithSticker": "enable",
     "AutoGreetSendPerHour": "1",
     "AutoPost": "disable",
-    "AutoPostText": "༻𝐎𝐖𝐍𝐄𝐑:- ☞Rudra☜ ༺ ༒𝚈𝚘𝚞 𝙲𝚊𝚗 𝙲𝚊𝚕𝚕 𝙷𝚒𝚖 〠ℝ𝕦𝕕𝕣𝕒〠.༒ ༒𝐇𝐢𝐬 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 𝐢𝐝༒:- ☞ www.facebook.com/profile.php?id=61550558518720 ☜ ֎𝘍𝘰𝘳 𝘈𝘯𝘺 𝘒𝘪𝘯𝘥 𝘖𝘧 𝘏𝘦𝘭𝘱 :- https://t.me/ℝ𝕦𝕕𝕣𝕒 𝕁𝕒𝕒𝕥☜",
+    "AutoPostText": "༻𝐎𝐖𝐍𝐄𝐑:- ☞𝐇𝐚𝐛𝐢𝐛☜ ༺ ༒𝚈𝚘𝚞 𝙲𝚊𝚗 𝙲𝚊𝚕𝚕 𝙷𝚒𝚖 〠ℍ𝔸𝔹𝕀𝔹〠.༒ ༒𝐇𝐢𝐬 𝐅𝐚𝐜𝐞𝐛𝐨𝐨𝐤 𝐢𝐝༒:- ☞ www.facebook.com/profile.php?id=61550558518720 ☜ ֎𝘍𝘰𝘳 𝘈𝘯𝘺 𝘒𝘪𝘯𝘥 𝘖𝘧 𝘏𝘦𝘭𝘱 :- https://t.me/ℝ𝕦𝕕𝕣𝕒 𝕁𝕒𝕒𝕥☜",
     "AutoPostPerHour": "1",
     "AutoPostGreet": "disable",
     "AutoPostGreetPostPerHour": "6",
